--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 
 body {
 	font-family: 'Noto Sans', sans-serif;
-	background: #FFFFCC;
+	background-color: bisque;
 }
 
 h1, h2, h3, h4 {
@@ -40,6 +40,7 @@ h1, h2, h3, h4 {
 
 .about-list {
 	list-style: none;
+	padding-inline-start: 0;
 }
 
 
