--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,15 @@ h1, h2, h3, h4 {
 	font-family: 'Roboto Mono', monospace;
 }
 
+a {
+	text-decoration: none;
+	color: inherit;
+}
+
+a:hover {
+	color: blue;
+}
+
 .container {
 	max-width: 840px;
 	margin: 0 auto;
